# git-local-ignore

./: Cargo.toml  LICENSE-MIT  README.md
snap/: snapcraft.yaml
src/: cli.rs  git.rs  main.rs
