[package]
name = "git-local-ignore"
version = "0.1.0"
authors = ["Vyacheslav Pukhanov <vyacheslav.pukhanov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Locally exclude files from being tracked by Git (without adding them to .gitignore)"
readme = "README.md"
repository = "https://github.com/vpukhanov/git-local-ignore"
homepage = "https://github.com/vpukhanov/git-local-ignore"
keywords = ["cli", "git", "gitignore", "ignore", "exclude"]
categories = ["command-line-utilities"]

[profile.release] # Optimize the release build for size
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
clap = "3.0.0-beta.1"
dialoguer = "0.6.2"
pathdiff = "0.2.0"